--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "googleapis": "^61.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "material-icons": "^0.3.1",
     "ng-chartist": "^4.1.0",
     "ng2-charts": "^2.4.2",
     "perfect-scrollbar": "^1.5.0",
@@ -44,11 +45,15 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.4",
-    "@angular/cli": "~10.1.4",
+    "@angular/cli": "^10.2.0",
     "@angular/compiler-cli": "~10.1.4",
-    "@types/node": "^12.11.1",
+    "@types/bootstrap": "4.5.0",
+    "@types/chartist": "0.11.0",
+    "@types/googlemaps": "3.39.14",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "3.5.2",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -60,10 +65,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "@types/bootstrap": "4.5.0",
-    "@types/chartist": "0.11.0",
-    "@types/googlemaps": "3.39.14",
-    "@types/jquery": "3.5.2"
+    "typescript": "~4.0.2"
   }
 }
