--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@angular/common": "~10.1.4",
     "@angular/compiler": "~10.1.4",
     "@angular/core": "~10.1.4",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.4",
     "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "angular-datatables": "^10.0.0",
+    "apexcharts": "^3.22.2",
     "arrive": "^2.4.1",
     "bootstrap": "^4.5.3",
     "bootstrap-material-design": "^4.1.3",
@@ -33,9 +36,9 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
-    "ng-chartist": "^4.1.0",
     "ng2-charts": "^2.4.2",
     "perfect-scrollbar": "^1.5.0",
+    "piechart": "^1.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
