--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
     "@angular/common": "~10.1.4",
     "@angular/compiler": "~10.1.4",
     "@angular/core": "~10.1.4",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.1.4",
     "@angular/material": "^10.2.5",
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "angular-datatables": "^10.0.0",
+    "apexcharts": "^3.22.2",
     "arrive": "^2.4.1",
+    "auth-service-js": "^1.0.0-rc.1",
     "bootstrap": "^4.5.3",
     "bootstrap-material-design": "^4.1.3",
     "bootstrap-notify": "^3.1.3",
@@ -32,9 +36,11 @@
     "googleapis": "^61.0.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
-    "ng-chartist": "^4.1.0",
+    "material-icons": "^0.3.1",
     "ng2-charts": "^2.4.2",
+    "node-auth-guard": "^2.4.0",
     "perfect-scrollbar": "^1.5.0",
+    "piechart": "^1.0.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
@@ -44,11 +50,15 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.4",
-    "@angular/cli": "~10.1.4",
+    "@angular/cli": "^10.2.0",
     "@angular/compiler-cli": "~10.1.4",
-    "@types/node": "^12.11.1",
+    "@types/bootstrap": "4.5.0",
+    "@types/chartist": "0.11.0",
+    "@types/googlemaps": "3.39.14",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "3.5.2",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -60,10 +70,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "@types/bootstrap": "4.5.0",
-    "@types/chartist": "0.11.0",
-    "@types/googlemaps": "3.39.14",
-    "@types/jquery": "3.5.2"
+    "typescript": "~4.0.2"
   }
 }
