--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
     "angular-datatables": "^10.0.0",
+    "angular-material-datepicker": "^1.0.2",
     "apexcharts": "^3.22.2",
     "arrive": "^2.4.1",
     "auth-service-js": "^1.0.0-rc.1",
