--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~10.1.4",
     "angular-datatables": "^10.0.0",
     "angular-material-datepicker": "^1.0.2",
+    "angular-oauth2-oidc": "^10.0.3",
     "apexcharts": "^3.22.2",
     "arrive": "^2.4.1",
     "auth-service-js": "^1.0.0-rc.1",
