--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
+    "xlsx": "^0.16.9",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
