--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
+    "ng-uikit-pro-standard": "^1.0.0",
     "ng2-charts": "^2.4.2",
     "node-auth-guard": "^2.4.0",
     "perfect-scrollbar": "^1.5.0",
