--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "perfect-scrollbar": "^1.5.0",
     "piechart": "^1.0.0",
     "popper.js": "^1.16.1",
+    "progress-spinner": "^1.1.0",
     "rxjs": "~6.6.0",
     "rxjs-compat": "^6.6.3",
     "tslib": "^2.0.0",
@@ -54,7 +55,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.4",
-    "@angular/cli": "^10.2.0",
+    "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "~10.1.4",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.0",
