--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "material-icons": "^0.3.1",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng2-charts": "^2.4.2",
+    "ngx-material-timepicker": "^5.5.3",
     "node-auth-guard": "^2.4.0",
     "perfect-scrollbar": "^1.5.0",
     "piechart": "^1.0.0",
