--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.1.4",
     "@angular/platform-browser-dynamic": "~10.1.4",
     "@angular/router": "~10.1.4",
+    "@material/dialog": "^8.0.0",
     "angular-datatables": "^10.0.0",
     "angular-material-datepicker": "^1.0.2",
     "angular-oauth2-oidc": "^10.0.3",
@@ -39,6 +40,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
+    "material-tooltip": "^1.0.1",
     "ng-uikit-pro-standard": "^1.0.0",
     "ng2-charts": "^2.4.2",
     "ngx-material-timepicker": "^5.5.3",
