--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classlist": "^2.0.0",
     "express": "^4.17.1",
     "googleapis": "^61.0.0",
+    "hamburgers": "^1.1.3",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-icons": "^0.3.1",
